[package]
name = "pvm-executor"
description = "Embassy-based cooperative executor for PVM actor programs"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
pvm-abi = { path = "../pvm-abi" }
pvm-actors = { path = "../pvm-actors" }
